--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<h2>header.component</h2>
+<div class="header">
+    <div class="header__heading">
+
+    </div>
+    <div class="header__navigation">
+        <div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
+                perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <i class="icon-github general__logo"></i>
+        </div>
+    </div>
+</div>
