--- a/src/styles/general/_colors_variables.sass
+++ b/src/styles/general/_colors_variables.sass
@@ -7,9 +7,11 @@ $widget-background-color: $header-main-color
 $widget-start-background-color: $body-background-color
 $widget-news-single-item-background-color: rgb(20, 34, 58)
 $widget-border-color: $widget-news-single-item-background-color
+$widget-shadow-color: rgb(86, 143, 165)
+$widget-outline-color: $widget-news-single-item-background-color
 
 $icons-color: rgb(50, 100, 141)
-$font-color: rgb(86, 143, 165)
+$font-color: $widget-shadow-color
 $logo-color: rgb(208, 217, 231)
 $link-color: $header-shadow-color
 
