feature (stock-monitor) realize header component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,19 @@
 <div class="header">
     <div class="header__heading">
-
+        <i class="icon-stocks header__item header__logo"></i>
+        <a href=""
+           class="general__font header__item">
+            stocks.tools</a>
     </div>
     <div class="header__navigation">
-        <div>
-            <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
-                perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-            <i class="icon-github general__logo"></i>
-        </div>
+        <a href=""
+           class="general__font header__item header__item--nav_background">
+            about</a>
+        <a href="https://github.com/HarryR10/stocks-monitor"
+           class="header__item header__item--nav_background"
+           target="_blank">
+            <i class="icon-github general__icon navigation__icon"></i>
+        </a>
     </div>
 </div>
+
