--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,8 @@
-@import "styles/general/colors_variables"
-@import "styles/general/_logo"
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap')
 @import "assets/icons/icomoon/_glyphs.css"
+@import "~normalize.css/normalize.css"
+@import "styles/general/colors_variables"
+@import "styles/general/header/navigation"
+@import "styles/general/header/header"
+@import "styles/general/general"
+@import "styles/general/body"
