--- a/src/styles/general/_colors_variables.sass
+++ b/src/styles/general/_colors_variables.sass
@@ -1,7 +1,8 @@
-$header-main-color: rgb(13, 28, 40)
-$header-shadow-color: rgb(76, 98, 126)
-
 $body-background-color: rgb(37, 60, 76)
+
+$header-main-color: rgb(13, 28, 40)
+$header-shadow-color: rgba(76, 98, 126, 0.48)
+$header-background-item-when-hovering: $body-background-color
 
 $widget-background-color: $header-main-color
 $widget-start-background-color: $body-background-color
