--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div>
+    Icons made by:
+    <ul>
+        <li><a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
+            perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></li>
+        <li><a href="https://fontawesome.com/">fontawesome</a></li>
+    </ul>
+</div>
+
