--- a/src/assets/icons/icomoon/_glyphs.css
+++ b/src/assets/icons/icomoon/_glyphs.css
@@ -1,26 +1,32 @@
 @font-face {
     font-family: 'icomoon';
-    src: url('fonts/icomoon.eot?6qjczx');
-    src: url('fonts/icomoon.eot?6qjczx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?6qjczx') format('truetype'),
-    url('fonts/icomoon.woff?6qjczx') format('woff'),
-    url('fonts/icomoon.svg?6qjczx#icomoon') format('svg');
+    src: url('fonts/icomoon.eot?i6t1fm');
+    src: url('fonts/icomoon.eot?i6t1fm#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i6t1fm') format('truetype'),
+    url('fonts/icomoon.woff?i6t1fm') format('woff'),
+    url('fonts/icomoon.svg?i6t1fm#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
 
 [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'icomoon' !important;
-    speak: never;
+    speak: none;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
     line-height: 1;
 
+    /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-stocks:before {
+    content: "\e901";
 }
 
 .icon-github:before {
