refactor (src.styles) refactor styles of header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,39 @@
-<div class="header">
+<div class="header
+            header--header-main-color
+            header--bold
+            general--font-type">
     <div class="header__heading">
-        <i class="icon-stocks header__item header__logo"></i>
         <a href=""
-           class="general__font header__item">
-            stocks.tools</a>
-    </div>
-    <div class="header__navigation">
-        <a href=""
-           class="general__font header__item header__item--nav_background">
-            about</a>
-        <a href="https://github.com/HarryR10/stocks-monitor"
-           class="header__item header__item--nav_background"
-           target="_blank">
-            <i class="icon-github general__icon navigation__icon"></i>
+           class="header__item
+                  header--desktop-font-size
+                  general--font-color">
+            <i class="icon-stocks
+                      header__logo
+                      header--desktop-logo-size
+                      header--logo-color">
+            </i>
+            stocks.tools
         </a>
     </div>
+
+    <div class="header__navigation">
+        <a href=""
+           class="header__item
+                  header__item--nav_background
+                  header--desktop-font-size-small
+                  general--font-color">
+            about</a>
+
+        <a href="https://github.com/HarryR10/stocks-monitor"
+           class="header__item
+                  header__item--nav_background
+                  header--desktop-logo-size
+                  general--icon-color"
+           target="_blank">
+            <i class="icon-github"></i>
+        </a>
+
+    </div>
+
 </div>
 
