--- a/src/styles/general/_body.sass
+++ b/src/styles/general/_body.sass
@@ -1,4 +1,5 @@
 @import "colors_variables"
 
 .body
-  background: $body-background-color
+  &--body-background-color
+    background: $body-background-color
