--- a/src/styles/general/_general.sass
+++ b/src/styles/general/_general.sass
@@ -1,10 +1,13 @@
 @import "src/styles/general/colors_variables"
 
 .general
-  &__icon
+  &--icon-color
     color: $icons-color
 
-  &__font
-    font-family: 'Noto Sans JP', sans-serif
+  &--font-color
     color: $font-color
+
+  &--font-type
+    font-family: 'Noto Sans JP', sans-serif
+
 
