feature (src.styles) add styles for footer / edit some styles

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,3 +5,4 @@
 @import "styles/general/header/header"
 @import "styles/general/general"
 @import "styles/general/body"
+@import "styles/general/footer"
