--- a/src/styles/general/_general.sass
+++ b/src/styles/general/_general.sass
@@ -10,4 +10,8 @@
   &--font-type
     font-family: 'Noto Sans JP', sans-serif
 
+  &--link-color
+    color: $link-color
 
+  &--bold
+    font-weight: bold
