feature (src.app) add footer / edit header components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,39 @@
-<div>
-    Icons made by:
-    <ul>
-        <li><a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
-            perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></li>
-        <li><a href="https://fontawesome.com/">fontawesome</a></li>
-    </ul>
+<div class="footer
+            footer--font-size
+            footer--footer-main-color
+            general--font-type
+            general--font-color">
+    <div class="footer__item
+                general--bold">
+        Icons made by:
+    </div>
+
+    <div class="footer__item">
+        <ul class="footer__list">
+            <li>
+                <a href="https://www.flaticon.com/authors/pixel-perfect"
+                   title="Pixel perfect"
+                   target="_blank"
+                   class="general--link-color">
+                    Pixel perfect
+                </a>
+                from
+                <a href="https://www.flaticon.com/"
+                   title="Flaticon"
+                   target="_blank"
+                   class="general--link-color">
+                    www.flaticon.com
+                </a>
+            </li>
+            <li>
+                <a href="https://fontawesome.com/"
+                   title="Font Awesome"
+                   target="_blank"
+                   class="general--link-color">
+                    Font Awesome
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 
