--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header
             header--header-main-color
-            header--bold
+            general--bold
             general--font-type">
     <div class="header__heading">
         <a href=""
