feature (src.styles) add some widget styles

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap')
 @import "assets/icons/icomoon/_glyphs.css"
 @import "~normalize.css/normalize.css"
-@import "styles/general/colors_variables"
-@import "styles/general/header/header"
-@import "styles/general/general"
-@import "styles/general/body"
-@import "styles/general/footer"
+@import "styles/colors_variables"
+@import "styles/header"
+@import "styles/general"
+@import "styles/body"
+@import "styles/footer"
+@import "styles/area-widget/area-widget"
+@import "styles/area-widget/cell-widget/cell-widget-start"
+@import "styles/area-widget/cell-widget/cell-widget-left"
+@import "styles/area-widget/cell-widget/cell-widget-right"
