feature (src.app.chart-widget) add html markup for chart-widget

--- a/src/app/chart-widget/chart-widget.component.html
+++ b/src/app/chart-widget/chart-widget.component.html
@@ -1,1 +1,27 @@
-<p>chart-widget works!</p>
+<div class="layout-widget">
+    <button class="layout-widget__out-btn">x</button>
+    <div class="layout-chart-widget">
+        <div class="layout-chart-widget__company-index
+                    layout-chart-widget__company-index--left-corner">
+            <div class="layout-chart-widget__company-name">IBM</div>
+            <img class="layout-chart-widget__company-today-conversion-arrow"
+                 src="http://placekitten.com/g/20/20" alt="arrow">
+            <div class="layout-chart-widget__company-today-conversion-cents"></div>
+        </div>
+        <div class="layout-chart-widget__company-index
+                    layout-chart-widget__company-index--right-corner">
+            <time datetime="2020-10-13 00:00">13.10.2020</time>
+        </div>
+        <div class="layout-chart-widget__chart">
+            <img src="http://placekitten.com/g/900/700" alt="place for chart">
+        </div>
+        <div class="layout-chart-widget__actions">
+            <button class="layout-chart-widget__download-btn
+                           layout-chart-widget__download-btn--left-corner">download .csv
+            </button>
+            <button class="layout-chart-widget__change-stock-btn
+                           layout-chart-widget__change-stock-btn--right-corner">change stock
+            </button>
+        </div>
+    </div>
+</div>
