chore (src) some fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>app.component</h1>
+<div class="area-widget
+            area-widget--desktop-view
+            area-widget--grid-1-2">
+    <app-chart-widget class="cell-widget-left"></app-chart-widget>
+    <app-start-widget class="cell-widget-start"></app-start-widget>
+    <!--    <div class="cell-widget-start">start-widget</div>-->
+    <!--    <div class="cell-widget-left">widget-left</div>-->
+    <!--    <div class="widget-right"></div>-->
+</div>
