refactor (src.app.chart-widget) edit chart-widget.component.html

--- a/src/app/chart-widget/chart-widget.component.html
+++ b/src/app/chart-widget/chart-widget.component.html
@@ -1,27 +1,43 @@
-<div class="layout-widget">
-    <button class="layout-widget__out-btn">x</button>
+<div class="layout-widget
+            general--font-color
+            general--font-type">
+    <div class="layout-widget__out-btn
+                   general--bold">+
+    </div>
     <div class="layout-chart-widget">
+
         <div class="layout-chart-widget__company-index
                     layout-chart-widget__company-index--left-corner">
-            <div class="layout-chart-widget__company-name">IBM</div>
-            <img class="layout-chart-widget__company-today-conversion-arrow"
-                 src="http://placekitten.com/g/20/20" alt="arrow">
-            <div class="layout-chart-widget__company-today-conversion-cents"></div>
+            <div class="layout-chart-widget__company-name
+                        layout-chart-widget__company-name--desktop-font-size
+                        general--bold">IBM
+            </div>
+            <div class="css-icon-up-arrow
+                            layout-chart-widget__company-today-conversion-arrow"></div>
+            <div class="layout-chart-widget__company-today-conversion-cents">+0.5%</div>
         </div>
+
         <div class="layout-chart-widget__company-index
                     layout-chart-widget__company-index--right-corner">
-            <time datetime="2020-10-13 00:00">13.10.2020</time>
+            <time class="layout-chart-widget__date-last-value
+                         layout-chart-widget__date-last-value--desktop-font-size"
+                  datetime="2020-10-13 00:00">13.10.2020
+            </time>
         </div>
-        <div class="layout-chart-widget__chart">
-            <img src="http://placekitten.com/g/900/700" alt="place for chart">
+
+        <div class="layout-chart-widget__chart
+                    layout-chart-widget__chart--center">
+            <img src="http://placekitten.com/g/800/580" alt="place for chart">
         </div>
-        <div class="layout-chart-widget__actions">
-            <button class="layout-chart-widget__download-btn
-                           layout-chart-widget__download-btn--left-corner">download .csv
-            </button>
-            <button class="layout-chart-widget__change-stock-btn
-                           layout-chart-widget__change-stock-btn--right-corner">change stock
-            </button>
-        </div>
+        <button class="layout-chart-widget__action
+                       layout-chart-widget__download-btn
+                       layout-chart-widget__download-btn--left-corner
+                       general--font-color" type="button">download .csv
+        </button>
+        <button class="layout-chart-widget__action
+                       layout-chart-widget__change-stock-btn
+                       layout-chart-widget__change-stock-btn--right-corner
+                       general--font-color" type="button">change stock
+        </button>
     </div>
 </div>
