feature (src.assets.icons) add arrows icons

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap')
 @import "assets/icons/icomoon/_glyphs.css"
+@import "src/assets/icons/_arrows"
 @import "~normalize.css/normalize.css"
 @import "styles/colors_variables"
 @import "styles/header"
