feature (src.styles / package.json) add fontawesome icons

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,6 +2,7 @@
 @import "assets/icons/icomoon/_glyphs.css"
 @import "src/assets/icons/_arrows"
 @import "~normalize.css/normalize.css"
+@import "~@fortawesome/fontawesome-free/css/all.min.css"
 @import "styles/colors_variables"
 @import "styles/header"
 @import "styles/general"
