--- a/src/styles/_colors_variables.sass
+++ b/src/styles/_colors_variables.sass
@@ -6,13 +6,13 @@ $header-background-item-when-hovering: $body-background-color
 
 $widget-background-color: $header-main-color
 $widget-start-background-color: $body-background-color
-$widget-news-single-item-background-color: rgb(20, 34, 58)
-$widget-border-color: $widget-news-single-item-background-color
-$widget-shadow-color: rgb(86, 143, 165)
-$widget-outline-color: $widget-news-single-item-background-color
+$widget-action-item-background-color: rgb(20, 34, 58)
+$widget-border-color: $widget-action-item-background-color
+$widget-shadow-color: rgba(86, 143, 165, 0.34)
+$widget-outline-color: $widget-action-item-background-color
 
 $icons-color: rgb(50, 100, 141)
-$font-color: $widget-shadow-color
+$font-color: rgb(86, 143, 165)
 $logo-color: rgb(208, 217, 231)
 $link-color: $header-shadow-color
 
