feature (src.styles) add styles for area-widget

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,3 +12,6 @@
 @import "styles/area-widget/cell-widget/cell-widget-start"
 @import "styles/area-widget/cell-widget/cell-widget-left"
 @import "styles/area-widget/cell-widget/cell-widget-right"
+@import "styles/area-widget/area-widget"
+@import "styles/area-widget/layout-widget/layout-chart-widget"
+@import "styles/area-widget/layout-widget/layout-widget"
