refactor (src.app.header / src.styles.header) edit component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,14 +19,14 @@
     <div class="header__navigation">
         <a href=""
            class="header__item
-                  header__item--nav_background
+                  header__item--on-hover
                   header--desktop-font-size-small
                   general--font-color">
             about</a>
 
         <a href="https://github.com/HarryR10/stocks-monitor"
            class="header__item
-                  header__item--nav_background
+                  header__item--on-hover
                   header--desktop-logo-size
                   general--icon-color"
            target="_blank">
