--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -21,8 +21,9 @@
     margin-right: 3px
     text-decoration: none
 
-  &__item--nav_background:hover
-    background: $header-background-item-when-hovering
+  &__item--on-hover:hover
+    height: 45%
+
 
   &__logo
     vertical-align: center
