feature (src.assets) add one css-icon

--- a/src/assets/icons/_css-generate-icons.sass
+++ b/src/assets/icons/_css-generate-icons.sass
@@ -13,3 +13,19 @@
   border-left: 10px solid transparent
   border-right: 10px solid transparent
   border-top: 15.5px solid $chart-candle-fall-color
+
+.css-icon-cross
+  background: $font-color
+  height: 100px
+  position: relative
+  width: 20px
+
+  &:after
+    background: $font-color
+    content: ""
+    height: 20px
+    left: -40px
+    position: absolute
+    top: 40px
+    width: 100px
+
