feature (src.app) add search component

--- a/src/app/chart-widget/chart-widget.component.html
+++ b/src/app/chart-widget/chart-widget.component.html
@@ -4,6 +4,10 @@
     <div class="layout-widget__out-btn
                    general--bold">+
     </div>
+
+    <!--    ngif there-->
+    <app-search></app-search>
+
     <div class="layout-chart-widget">
 
         <div class="layout-chart-widget__company-index
