feature (src.app.start-widget) edit html markup

--- a/src/app/start-widget/start-widget.component.html
+++ b/src/app/start-widget/start-widget.component.html
@@ -1,1 +1,33 @@
-<p>start-widget works!</p>
+<div class="layout-widget
+            layout-widget--background-color-light
+            general--font-color
+            general--font-type">
+    <div class="layout-widget__out-btn general--bold">+</div>
+    <div class="start-menu">
+        <div class="start-menu__instruction
+                    start-menu--desktop-font-size">
+            Choose&nbsp;a&nbsp;new monitor <b>widget:</b>
+        </div>
+        <div class="start-menu__actions
+                    start-menu__actions--desktop-font-size">
+            <div class="start-menu__add-widget">
+                <i class="fas fa-chart-bar
+                          start-menu__add-widget-icon"></i>
+                <div class="start-menu__widget-name
+                            start-menu__widget-name--desktop-font-size">stocks
+                </div>
+            </div>
+            <div class="start-menu__add-widget">
+                <i class="fas fa-newspaper
+                          start-menu__add-widget-icon"></i>
+                <div class="start-menu__widget-name
+                            start-menu__widget-name--desktop-font-size">news
+                </div>
+            </div>
+        </div>
+        <div class="start-menu__powered-by">powered by&nbsp;
+            <a class="general--link-color"
+               href="https://www.alphavantage.co/"
+               target="_blank">Alpha Vantage API</a></div>
+    </div>
+</div>
