chore (src) fix styles, set basic markup

--- a/src/app/chart-widget/chart-widget.component.html
+++ b/src/app/chart-widget/chart-widget.component.html
@@ -1,8 +1,9 @@
 <div class="layout-widget
+            layout-widget--background-color-dark
             general--font-color
             general--font-type">
     <div class="layout-widget__out-btn
-                   general--bold">+
+                general--bold">+
     </div>
 
     <!--    ngif there-->
