--- a/src/styles/area-widget/layout-widget/_layout-widget.sass
+++ b/src/styles/area-widget/layout-widget/_layout-widget.sass
@@ -5,33 +5,37 @@
   border-radius: 30px
   box-shadow: 0 0px 30px $widget-shadow-color
   padding: 20px
-  background: $widget-background-color
   position: relative
 
+  //TODO: есть проблема с отображением в Safari. Как провильно центрировать "+"?
   &__out-btn
+    //padding-left: 1px
+    //padding-top: 1px
     border: none
     outline-style: none
     display: flex
-    justify-content: space-around
+    justify-items: stretch
+    justify-content: center
     position: absolute
     z-index: 1
     left: 100%
     top: -40px
     width: 43px
     height: 43px
-    border-radius: 40px
+    border-radius: 50px
     cursor: pointer
     background-color: $widget-border-color
     box-shadow: 0 0px 10px $widget-shadow-color
     transform: rotate(45deg)
-    font-size: 35px
+    font-size: 34px
 
   &__out-btn:hover
     box-shadow: 0 0px 10px $widget-border-color
     transform: rotate(135deg)
     transition: 1s
 
-  &__out-btn:after
-    transform: rotate(180deg)
-  //transition: 1s
+  &--background-color-dark
+    background: $widget-background-color
 
+  &--background-color-light
+    background: $body-background-color
