--- a/src/styles/_footer.sass
+++ b/src/styles/_footer.sass
@@ -6,6 +6,7 @@
   justify-content: center
   align-items: center
   box-shadow: 0 -10px 30px $header-shadow-color
+  flex: 0 0 auto
 
   &__item
     display: inline-flex
