chore (src.styles) change color for button in search component

--- a/src/styles/_colors_variables.sass
+++ b/src/styles/_colors_variables.sass
@@ -7,6 +7,7 @@ $header-background-item-when-hovering: $body-background-color
 $widget-background-color: $header-main-color
 $widget-start-background-color: $body-background-color
 $widget-action-item-background-color: rgb(20, 34, 58)
+$widget-action-search-background-color: rgb(37, 60, 76)
 $widget-border-color: $widget-action-item-background-color
 $widget-shadow-color: rgba(86, 143, 165, 0.34)
 $widget-outline-color: $widget-action-item-background-color
