--- a/src/styles/area-widget/layout-widget/_layout-widget.sass
+++ b/src/styles/area-widget/layout-widget/_layout-widget.sass
@@ -39,3 +39,9 @@
 
   &--background-color-light
     background: $body-background-color
+
+  &--cell-widget-left
+    grid-area: widget-left
+
+  &--cell-widget-right
+    grid-area: widget-right
