fix (src) repair CSS-grid, set min-width

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div class="area-widget
-            area-widget--grid-horizontal">
+<div class="area-widget-wrap
+            area-widget-wrap--grid-horizontal">
     <app-chart-widget class="layout-widget--cell-widget-left"></app-chart-widget>
-    <app-start-widget class="layout-widget--cell-widget-start"></app-start-widget>
-    <!--    <div class="cell-widget-start">start-widget</div>-->
-    <!--    <div class="cell-widget-left">widget-left</div>-->
-    <!--    <div class="widget-right"></div>-->
+    <app-chart-widget class="layout-widget--cell-widget-right"></app-chart-widget>
+    <app-start-widget class="layout-widget--cell-widget-left"></app-start-widget>
 </div>
