--- a/src/app/search/search.component.sass
+++ b/src/app/search/search.component.sass
@@ -12,13 +12,13 @@
     border: none
     outline-style: none
     background-color: $widget-action-search-background-color
-    border-radius: 25% / 55%
+    border-radius: 50px / 50px
     padding: 7px 10px 10px 10px
     margin: 5px
 
 
   &__field
-    border-radius: 8% / 60%
+    border-radius: 50px / 50px
     outline-style: none
     border: none
     padding: 7px 7px 10px 7px
