--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,8 +3,8 @@
 @import "assets/icons/css-generate-icons"
 @import "~normalize.css/normalize.css"
 @import "~@fortawesome/fontawesome-free/css/all.min.css"
-@import "styles/colors_variables"
-@import "styles/general"
-@import "styles/body"
-@import "styles/area-widget/area-widget"
-@import "styles/area-widget/layout-widget/layout-widget"
+@import "colors_variables"
+@import "general"
+@import "body"
+@import "styles/area-widget/area-widget-wrap"
+@import "styles/area-widget/layout-widget"
