feature (src.app) add about component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="area-widget-wrap
-            area-widget-wrap--grid-horizontal">
-    <app-chart-widget class="layout-widget--cell-widget-left"></app-chart-widget>
-    <app-chart-widget class="layout-widget--cell-widget-right"></app-chart-widget>
-    <app-start-widget class="layout-widget--cell-widget-left"></app-start-widget>
-</div>
+<router-outlet></router-outlet>
