--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
             general--bold
             general--font-type">
     <div class="header__heading">
-        <a href=""
+        <a routerLink=""
            class="header__item
                   header--desktop-font-size
                   general--font-color">
@@ -18,6 +18,13 @@
 
     <div class="header__navigation">
         <a href=""
+           class="header__item
+                  header__item--on-hover
+                  header--desktop-font-size-small
+                  general--font-color">
+            reset</a>
+
+        <a routerLink="about"
            class="header__item
                   header__item--on-hover
                   header--desktop-font-size-small
