--- a/src/app/widget-area/widget-area.component.html
+++ b/src/app/widget-area/widget-area.component.html
@@ -10,15 +10,17 @@
 
     <ng-container *ngFor="let cell of getCells()" [ngSwitch]="cell.type.isStartWidget">
 
-        <ng-template [ngSwitchCase]="true">
-            <app-widget [isCanBeClosed]="false" [isDark]="false">
-                <app-start-widget></app-start-widget>
-            </app-widget>
-        </ng-template>
+        <!--        TODO: раскомментить, -->
+        <!--        <ng-template [ngSwitchCase]="true">-->
+        <!--            <app-widget [isCanBeClosed]="false" [isDark]="false">-->
+        <!--                <app-start-widget></app-start-widget>-->
+        <!--            </app-widget>-->
+        <!--        </ng-template>-->
 
-        <ng-template [ngSwitchCase]="false">
+        <!--        TODO: поменять на false-->
+        <ng-template [ngSwitchCase]="true">
             <app-widget [isCanBeClosed]="true" [isDark]="true">
-                <app-chart-widget></app-chart-widget>
+                <app-chart-widget [index]="'IBM'"></app-chart-widget>
             </app-widget>
         </ng-template>
 
