--- a/src/app/widget-area/widget/chart-widget/chart/chart.component.html
+++ b/src/app/widget-area/widget/chart-widget/chart/chart.component.html
@@ -22,8 +22,8 @@
 
     <div class="layout-chart-widget__chart
                     layout-chart-widget__chart--center">
-        <img src="http://placekitten.com/g/800/580" alt="place for chart">
-
+        <!--        <img src="http://placekitten.com/g/800/580" alt="place for chart">-->
+        <div class="chart-area"></div>
     </div>
     <button class="layout-chart-widget__action
                        layout-chart-widget__download-btn
