chore (chart-widget) fix view of chart-widget component; some small fixes and comments

--- a/src/app/widget-area/widget/chart-widget/chart-widget.component.html
+++ b/src/app/widget-area/widget/chart-widget/chart-widget.component.html
@@ -6,7 +6,12 @@
 <!--                general&#45;&#45;bold">+-->
 <!--    </div>-->
 
-<app-search></app-search>
-<app-chart></app-chart>
+<ng-container *ngIf="index !== ''">
+    <app-chart [index]="index"></app-chart>
+</ng-container>
+<ng-container *ngIf="index === ''">
+    <app-search></app-search>
+</ng-container>
+
 
 <!--</div>-->
