feature (chart-widget): realize search api method

--- a/src/app/widget-area/widget/chart-widget/chart-widget.component.html
+++ b/src/app/widget-area/widget/chart-widget/chart-widget.component.html
@@ -6,10 +6,11 @@
 <!--                general&#45;&#45;bold">+-->
 <!--    </div>-->
 
-<ng-container *ngIf="index !== ''">
+<!--TODO: поменять местами условия-->
+<ng-container *ngIf="index === ''">
     <app-chart [index]="index"></app-chart>
 </ng-container>
-<ng-container *ngIf="index === ''">
+<ng-container *ngIf="index !== ''">
     <app-search></app-search>
 </ng-container>
 
