--- a/src/app/widget-area/widget/chart-widget/search/search.component.sass
+++ b/src/app/widget-area/widget/chart-widget/search/search.component.sass
@@ -32,3 +32,11 @@
   //modifiers
   &__btn--desktop-font-size
     font-size: 32px
+
+//https://css-tricks.com/complete-guide-table-element/
+.tab
+  tr:nth-child(odd)
+    background: $widget-shadow-color
+
+  tr:hover
+    background: aquamarine
