--- a/src/app/widget-area/widget/chart-widget/chart-widget.component.html
+++ b/src/app/widget-area/widget/chart-widget/chart-widget.component.html
@@ -6,13 +6,17 @@
 <!--                general&#45;&#45;bold">+-->
 <!--    </div>-->
 
-<!--TODO: поменять местами условия-->
-<ng-container *ngIf="index === ''">
-    <app-chart [index]="index"></app-chart>
-</ng-container>
-<ng-container *ngIf="index !== ''">
-    <app-search></app-search>
-</ng-container>
+<!--&lt;!&ndash;TODO: поменять местами условия&ndash;&gt;-->
+<!--<ng-container *ngIf="index === ''">-->
+<!--    <app-chart [index]="index"></app-chart>-->
+<!--</ng-container>-->
+<!--<ng-container *ngIf="index !== ''">-->
+<!--    <app-search></app-search>-->
+<!--</ng-container>-->
 
+<app-search (chooseIndex)="printEvent($event)"
+            (renderComponent)="setShowSearchComponent($event)"
+            *ngIf="showSearchComponent"></app-search>
+<app-chart *ngIf="!showSearchComponent"></app-chart>
 
 <!--</div>-->
