--- a/src/app/widget-area/widget/chart-widget/search/search.component.html
+++ b/src/app/widget-area/widget/chart-widget/search/search.component.html
@@ -5,9 +5,6 @@
         <label for="search" class="search-component__label">Type&nbsp;index&nbsp;here:</label>
         <input [formControl]="searchControl" type="text" class="search-component__field" id="search" required
                maxlength="30">
-        <!--        <button type="button" class="search-component__btn-->
-        <!--                                     general&#45;&#45;font-color">Search-->
-        <!--        </button>-->
     </div>
 </form>
 
@@ -34,7 +31,8 @@
         </tbody>
     </table>
     <button *ngIf="selectedCompany !== undefined"
-            (click)="print(selectedCompany.symbol)"
+            (click)="sendChosenCompany(selectedCompany)"
+            [disabled]="loading"
             type="button" class="search-component__btn general--font-color">
         Use {{selectedCompany.symbol}} index
     </button>
