feature (chart-widget): add switching back to search.component

--- a/src/app/widget-area/widget/chart-widget/chart-widget.component.html
+++ b/src/app/widget-area/widget/chart-widget/chart-widget.component.html
@@ -14,9 +14,11 @@
 <!--    <app-search></app-search>-->
 <!--</ng-container>-->
 
-<app-search (chooseIndex)="printEvent($event)"
+<app-search (chooseIndex)="setCurrentCompany($event)"
             (renderComponent)="setShowSearchComponent($event)"
             *ngIf="showSearchComponent"></app-search>
-<app-chart *ngIf="!showSearchComponent"></app-chart>
+<app-chart (renderComponent)="setShowSearchComponent($event)"
+           *ngIf="!showSearchComponent"
+           [currentCompany]="currentCompany"></app-chart>
 
 <!--</div>-->
