--- a/src/app/widget-area/widget/chart-widget/search/search.component.html
+++ b/src/app/widget-area/widget/chart-widget/search/search.component.html
@@ -31,7 +31,7 @@
         </tbody>
     </table>
     <button *ngIf="selectedCompany !== undefined"
-            (click)="sendChosenCompany(selectedCompany)"
+            (click)="useChosenCompany(selectedCompany)"
             [disabled]="loading"
             type="button" class="search-component__btn general--font-color">
         Use {{selectedCompany.symbol}} index
