feature (chart-widget): add download .csv function & refactor variables names

--- a/src/app/widget-area/widget-area.component.html
+++ b/src/app/widget-area/widget-area.component.html
@@ -20,7 +20,7 @@
         <!--        TODO: поменять на false-->
         <ng-template [ngSwitchCase]="true">
             <app-widget [isCanBeClosed]="true" [isDark]="true">
-                <app-chart-widget [index]="'IBM'"></app-chart-widget>
+                <app-chart-widget [symbol]="'IBM'"></app-chart-widget>
             </app-widget>
         </ng-template>
 
