--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,13 @@
     </div>
 
     <div class="header__navigation">
+        <a routerLink="settings"
+           class="header__item
+                  header__item--on-hover
+                  header--desktop-font-size-small
+                  general--font-color">
+            settings</a>
+
         <a href=""
            class="header__item
                   header__item--on-hover
